2010-12-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Test `$(var:suf=rpl)' expansion in special automake variables.
	* tests/posixsubst-data.test: New test.
	* tests/posixsubst-extradist.test: Likewise.
	* tests/posixsubst-ldadd.test: Likewise.
	* tests/posixsubst-libraries.test: Likewise.
	* tests/posixsubst-ltlibraries.test: Likewise.
	* tests/posixsubst-programs.test: Likewise.
	* tests/posixsubst-scripts.test: Likewise.
	* tests/posixsubst-sources.test: Likewise.
	* tests/posixsubst-tests.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2010-11-25  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix spurious failures in `silent*.test' for $CC != gcc
	In some tests on automake-produced silent rules, we forced the
	use of gcc depmode to improve testsuite coverage; but this has
	unsurprisingly led to spurious failures when some non-GNU C
	compilers were used.  So we are now careful to require GCC in
	tests that force gcc depmode.
	From reports by Ralf Wildenhues.
	* silent5.test: Test removed, its content split into ...
	* silent-many-generic.test, silent-many-gcc.test: ... these new
	sister tests, the latter of which forces gcc depmode and lists
	"gcc" in $required.
	* silentlex.test: Test removed, its content split into ...
	* silent-lex-generic.test, silent-lex-gcc.test: ... these new
	sister tests, the latter of which forces gcc depmode and lists
	"gcc" in $required.
	* silentyacc.test: Test removed, its content split into ...
	* silent-yacc-generic.test, silent-yacc-gcc.test: ... these new
	sister tests, the latter of which forces gcc depmode and lists
	"gcc" in $required.
	* tests/Makefile.am (TESTS): Updated.

2010-11-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests: consistently use "|| Exit 1" after ". ./defs".
	* tests/autohdr.test: Use `. ./defs || Exit 1', not bare
	`. ./defs', for consistency with other tests.
	* tests/autohdr2.test: Likewise.
	* tests/autohdr3.test: Likewise.
	* tests/autohdr4.test: Likewise.