@@ -37,7 +37,7 @@ bar.data bazzardoz:
 CLEANFILES = bar.data bazzardoz
 
 # Try also with `:=', to ensure the parser is not unduly confused
-# into thinking that it's an unportable assignement operator.
+# into thinking that it's an unportable assignment operator.
 dist_foo_DATA = $(t1:=.txt)
 foo_DATA = $(t2:x=.data)
 nodist_foo_DATA = $(t3:.y=zardoz)
