@@ -30,7 +30,7 @@ t1 = foo1 foo2
 t2 = bar.x
 t3 = baz-y
 # Try also with `:=', to ensure the parser is not unduly confused
-# into thinking that it's an unportable assignement operator.
+# into thinking that it's an unportable assignment operator.
 EXTRA_DIST = $(t1:=.c) $(t2:.x=.f) $(t3:-y=ar)
 bazar bar.f:
 	: > $@
