@@ -38,7 +38,7 @@ zardoz_PROGRAMS = foo bar
 noinst_LIBRARIES = libquux1.a libquux2.a libquux3.a
 
 # Try also with `:=', to ensure the parser is not unduly confused
-# into thinking that it's an unportable assignement operator.
+# into thinking that it's an unportable assignment operator.
 LDADD = $(u:.lib=.a)
 bar_LDADD = $(v:=.a) libquux2.a $(w:none=libquux3.a)
 
