@@ -34,7 +34,7 @@ foolibs = libfoo1 libfoo2
 barlibs = libbaz
 
 # Try also with `:=', to ensure the parser is not unduly confused
-# into thinking that it's an unportable assignement operator.
+# into thinking that it's an unportable assignment operator.
 lib_LTLIBRARIES = $(foolibs:=.la) $(barlibs:z=r.la)
 
 libbar.c:
