@@ -31,7 +31,7 @@ t1 = foo1 foo2
 t2 = barx bar2
 
 # Try also with `:=', to ensure the parser is not unduly confused
-# into thinking that it's an unportable assignement operator.
+# into thinking that it's an unportable assignment operator.
 bin_PROGRAMS = $(t1:=-p) $(t2:2=y)
 
 installcheck-local:
