@@ -35,7 +35,7 @@ bar1 bar2 quux.pl:
 CLEANFILES = bar1 bar2 quux.pl
 
 # Try also with `:=', to ensure the parser is not unduly confused
-# into thinking that it's an unportable assignement operator.
+# into thinking that it's an unportable assignment operator.
 dist_sbin_SCRIPTS = $(t1:=.sh)
 libexec_SCRIPTS = $(t2:x=)
 nodist_bin_SCRIPTS = $(t3:-baz=x.pl)
