@@ -34,7 +34,7 @@ BAR = bar__
 BAZ = baz.
 
 # Try also with `:=', to ensure the parser is not unduly confused
-# into thinking that it's an unportable assignement operator.
+# into thinking that it's an unportable assignment operator.
 foo_SOURCES = main.c $(FOO:.cxx=.c)
 dist_foo_SOURCES = $(BAR:__=.c)
 nodist_foo_SOURCES = $(BAZ:=c)
