@@ -35,7 +35,7 @@ foo2.test barz:
 CLEANFILES = foo2.test barz # for FreeBSD make
 
 # Try also with `:=', to ensure the parser is not unduly confused
-# into thinking that it's an unportable assignement operator.
+# into thinking that it's an unportable assignment operator.
 TESTS = $(t1:=.test) $(t2:x=y) $(t3:2=z)
 
 EXTRA_DIST = $(TESTS)
