@@ -1,3 +1,12 @@
+2010-12-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix typos in test comments.
+	* tests/posixsubst-data.test, tests/posixsubst-extradist.test,
+	tests/posixsubst-ldadd.test, tests/posixsubst-libraries.test,
+	tests/posixsubst-ltlibraries.test, tests/posixsubst-programs.test,
+	tests/posixsubst-scripts.test, tests/posixsubst-sources.test,
+	tests/posixsubst-tests.test: Fix typos.
+
 2010-12-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Test `$(var:suf=rpl)' expansion in special automake variables.
